<resources>
    <string name="app_name">android_projekt</string>
    <string name="restaurants">restaurants</string>
    <string name="splash">splash</string>
    <string name="profile">profile</string>
    <string name="food_for_you">Foodify</string>
    <string name="content_fragment">content</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert">insert</string>
    <string name="manage">manage</string>
    <string name="name">Enter your name</string>
    <string name="address">Enter your address</string>
    <string name="phone_number">Enter your phone number</string>
    <string name="email">Enter your email address</string>
    <string name="next">asd</string>
    <string name="back">av</string>


</resources>